--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="styles.css">
 <html>
-
-<head>
-  <title>
-    Eric Francis
-  </title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
   <div class="boston">
-    <div class="hero-text">
-      <h1 class="intro">Eric Francis</h1>
-      <a class='hyper-text' href="https://soundcloud.com/silverwaves"class="intro"> Music Producer,</a>
-        <a class='hyper-text' href="https://github.com/ericfrancis313"> Web Developer </a>
-          <a  class='hyper-text'href="https://twitter.com/code_kage">...Something else</a>
-      </div>
+    <head>
+      <title>
+        Eric Francis
+      </title>
+    </head>
+    <body>
+        <div class="hero-text">
+          <h1 class="intro">Eric Francis</h1>
+          <a class='hyper-text' href="https://open.spotify.com/artist/1ebkk9iJr0dn6QUwDngd9x?si=Xii9MA9_S9-vBJV8W2DJ6g"> Music Producer,</a>
+          <a class='hyper-text' href="https://github.com/ericfrancis313"> Web Developer </a>
+          <a class='hyper-text'href="https://twitter.com/code_kage">...Something else</a>
+        </div>
+    </body>
   </div>
-
-
-  <!-- the bottom pic to flex on em-->
-  <div class="quincy">
-<div class ="portfolio">
-
-
-</div>
-
-  </div>
-
-
-  <!--Spotify
-  <iframe src="https://open.spotify.com/embed/artist/1ebkk9iJr0dn6QUwDngd9x" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
--->
-
-  <!-- soundcloud
-
-      <iframe class="soundcloud" width="50%" height="450 " scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/649428114%3Fsecret_token%3Ds-RZdqp&color=%231d1d1d&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>-->
-</body>
-
 </html>
