--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,19 +1,63 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="styles.css">
 <html>
-  <div class="boston">
     <head>
       <title>
         Eric Francis
       </title>
     </head>
     <body>
-        <div class="hero-text">
-          <h1 class="intro">Eric Francis</h1>
-          <a class='hyper-text' href="https://open.spotify.com/artist/1ebkk9iJr0dn6QUwDngd9x?si=Xii9MA9_S9-vBJV8W2DJ6g"> Music Producer,</a>
-          <a class='hyper-text' href="https://github.com/ericfrancis313"> Web Developer </a>
-          <a class='hyper-text'href="https://twitter.com/code_kage">...Something else</a>
+        <div class="grid">
+          <div class="intro">
+            <div class="intro-text">
+              <h1>Eric Francis</h1>
+              <a class='hyper-text' href="https://open.spotify.com/artist/1ebkk9iJr0dn6QUwDngd9x?si=Xii9MA9_S9-vBJV8W2DJ6g">Music Producer</a>
+              <a class='hyper-text' href="https://github.com/ericfrancis313"> Web Developer </a>
+              <a class='hyper-text'href="https://twitter.com/code_kage">...Something else</a>
+            </div>
+            <div class="nav">
+              <a class='hyper-text' <%= link_to "Portfolio ", portfolio_index_path %></a>
+              <a class="hyper-text" <%= link_to " Resume", resume_index_path %></a>
+            </div>
+          </div>
+          <div class="tech">
+            <h1>Tech</h1>
+          </div>
+          <div class="tech-list">
+              <li>Html</li>
+              <li>Css</li>
+              <li>Javascript</li>
+              <li>Ruby</li>
+              <li>Python</li>
+          </div>
+          <div class="aboutme">
+            <h1>About me</h1>
+          </div>
+          <div class="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+          <p></p>
+
+          <div class="contact">
+
+          </div>
+          <div class="footer">
+            <a href="https://open.spotify.com/artist/1ebkk9iJr0dn6QUwDngd9x?si=Xii9MA9_S9-vBJV8W2DJ6g">
+              <%= image_tag 'spotify.png',style:'height:40px; width:40px; padding:3%;'%>
+            </a>
+            <a href="https://twitter.com/code_kage">
+              <%= image_tag "twitter.com.png", style: 'height:30px; width:30px; padding:3%; '%>
+            </a>
+            <a href="https://www.instagram.com/codekage/">
+              <%= image_tag "instagram.png", style: 'height:30px; width:30px; padding:3%; '%>
+            </a>
+            <a href="https://www.linkedin.com/in/ericfrancis313/">
+              <%= image_tag 'linkedin.com.png',style:'height:30px; width:30px; padding:3%; '%>
+            </a>
+            <a href="https://github.com/ericfrancis313">
+              <%= image_tag "github.com.png",style:'height:35px; width:35px; padding:3%; '%>
+            </a>
+          </div>
         </div>
+
     </body>
-  </div>
 </html>
