--- a/app/views/resume/index.html.erb
+++ b/app/views/resume/index.html.erb
@@ -1,1 +1,3 @@
-<h1>yerrr</h1>
+<div class="backdrop">
+  <a href="/public/Eric_Francis_Resume.pdf" download='ericfrancisresume.pdf'>download my resume</a>
+</div>
